--- a/App1/MainPage.xaml
+++ b/App1/MainPage.xaml
@@ -6,30 +6,31 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="6c757d">
 
     <Grid>
         <Image HorizontalAlignment="Center" Height="35" Margin="-190,27,0,0" VerticalAlignment="Top" Width="auto" Source="Assets/Image.png"/>
-        <Image HorizontalAlignment="Center" Height="350" Margin="60,-130,0,0" VerticalAlignment="Top" Width="auto" Source="Assets/mote.scale-400.png"/>
-        <ScrollViewer Margin="0, 90, 0, 0">
+        <Image HorizontalAlignment="Left" Height="350" Margin="72,-130,0,0" VerticalAlignment="Top" Width="auto" Source="Assets/mote.scale-400.png"/>
+        <ScrollViewer Margin="0,159,0,0" HorizontalAlignment="Center" VerticalAlignment="Top" Height="538" Width="411">
             <Grid>
                 <Grid Height="110" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10, 0, 10, 0">
-                    <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" Text="Get your position" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"/>
+                    <TextBlock HorizontalAlignment="Center" Margin="10,0,0,0" Text="Get your position" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"/>
                     <Grid Margin="20, 50, 0, 0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition></ColumnDefinition>
-                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition Width="87*"></ColumnDefinition>
+                            <ColumnDefinition Width="79*"></ColumnDefinition>
+                            <ColumnDefinition Width="7*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock HorizontalAlignment="Center" Grid.Column="0" Text="Latitude" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="18"/>
-                        <TextBlock x:Name="Lat" Grid.Column="0" Margin="0,20,0,0" HorizontalAlignment="Center" Text="0.000" TextWrapping="Wrap" VerticalAlignment="Center" RenderTransformOrigin="0.515,1.875" FontSize="18"/>
+                        <TextBlock HorizontalAlignment="Center" Text="Latitude" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="18"/>
+                        <TextBlock x:Name="Lat" Margin="0,28,0,0" HorizontalAlignment="Center" Text="0.000" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="0.515,1.875" FontSize="18"/>
 
-                        <TextBlock HorizontalAlignment="Center" Grid.Column="1" Text="Longitude" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="18"/>
-                        <TextBlock x:Name="Long" Grid.Column="1" Margin="0,20,0,0" HorizontalAlignment="Center" Text="0.000" TextWrapping="Wrap" VerticalAlignment="Center" RenderTransformOrigin="1.338,2.406" FontSize="18"/>
+                        <TextBlock HorizontalAlignment="Center" Grid.Column="1" Text="Longitude" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="18" Grid.ColumnSpan="2" Margin="1,0,0,0"/>
+                        <TextBlock x:Name="Long" Grid.Column="1" Margin="22,28,0,0" HorizontalAlignment="Center" Text="0.000" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="1.338,2.406" FontSize="18"/>
                     </Grid>
                 </Grid>
 
                 <Grid Height="190" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10, 120, 10, 0">
-                    <TextBlock HorizontalAlignment="Left" Margin="10,0,0,0" Text="Informations" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"/>
+                    <TextBlock HorizontalAlignment="Center" Margin="10,0,0,0" Text="Informations" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"/>
                     <Grid Margin="20, 50, 0, 0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition></ColumnDefinition>
@@ -40,7 +41,7 @@
 
                         <TextBlock HorizontalAlignment="Center" Grid.Column="1" Text="Temperature" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" FontSize="18"/>
                         <TextBlock x:Name="Temp" Grid.Column="1" Margin="0,30,0,0" HorizontalAlignment="Center" Text="0.000" TextWrapping="Wrap" VerticalAlignment="Top" RenderTransformOrigin="1.338,2.406" FontSize="18"/>
-                        </Grid>
+                    </Grid>
 
                     <Grid Margin="20, 120, 0, 0">
                         <Grid.ColumnDefinitions>
@@ -55,19 +56,20 @@
                     </Grid>
                 </Grid>
 
-                    <Grid Height="120" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10, 350, 10, 0">
+                <Grid Height="120" Width="auto" HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="10, 350, 10, 0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <Button Content="++" Grid.Column="2" FontSize="20" Click="Button_Click" Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                    <TextBox x:Name="Affich" Grid.Column="1" Margin="0,0,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                    <Button Content="--"  Grid.Column="0" Margin="0,0,0,0" Click="Button_Click_1" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 </Grid>
             </Grid>
         </ScrollViewer>
         <Grid/>
+        <Rectangle HorizontalAlignment="Center" Height="3" Margin="0,89,0,0" Stroke="White" VerticalAlignment="Top" Width="237" FocusVisualPrimaryBrush="#FFF7F7F7" FocusVisualSecondaryBrush="White" Fill="{ThemeResource AppBarItemForegroundThemeBrush}"/>
 
     </Grid>
+
+
+
 </Page>
